[project]
name = "git-filter-repo"
description = "Quickly rewrite git repository history"
authors = [
    {name = "Elijah Newren", email = "newren@gmail.com"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license.text = "MIT"
requires-python = ">= 3.6"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/newren/git-filter-repo"
Issues = "https://github.com/newren/git-filter-repo/issues/"
Source = "https://github.com/newren/git-filter-repo"

[project.scripts]
git-filter-repo = "git_filter_repo:main"

[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["git_filter_repo"]

[tool.setuptools_scm]
# This section intentionally left blank
