[metadata]
name = git-filter-repo
url = https://github.com/newren/git-filter-repo
project_urls =
    Source = https://github.com/newren/git-filter-repo
    Issues = https://github.com/newren/git-filter-repo/issues/
description = Quickly rewrite git repository history
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
platforms = any
license = MIT

[options]
scripts = git-filter-repo
py_modules = git_filter_repo
python_requires = >= 3.5
setup_requires = setuptools_scm

[bdist_wheel]
universal = 1
